[Smart Lock] Account chooser assign correct avatar to profile.

Fixes the bug, where avatar doesn't correspond to correct account in the
Account Chooser Dialog on Android.

BUG=660029

Review-Url: https://codereview.chromium.org/2454993004
Cr-Commit-Position: refs/heads/master@{#428609}

Former-commit-id: 1a46b550f643ef7199915d087f9861406763d3e9